--- a/Instructions/starter_code/deep learning model.ipynb
+++ b/Instructions/starter_code/deep learning model.ipynb
@@ -10,6 +10,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Read the CSV and Perform Basic Data Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -242,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +263,7 @@
        "Name: koi_disposition, dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -269,8 +276,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Create a Train Test Split\n",
+    "\n",
+    "Use `koi_disposition` for the y values"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,9 +298,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -496,7 +519,7 @@
        "[5 rows x 40 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -506,8 +529,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pre-processing\n",
+    "\n",
+    "Scale the data using the MinMaxScaler and perform some feature selection"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +560,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +630,7 @@
        "Name: koi_disposition, Length: 5243, dtype: object"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -621,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -634,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +675,7 @@
        "array([2, 2, 2, 2, 1, 2, 0, 0, 1, 2, 2, 2, 2, 2, 1, 1, 0, 2, 0, 2])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +711,7 @@
        "       [0., 0., 1.]], dtype=float32)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,10 +721,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "# Train the Model`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING:tensorflow:From C:\\Users\\Carol\\Anaconda3\\envs\\PythonData\\lib\\site-packages\\tensorflow\\python\\ops\\init_ops.py:1251: calling VarianceScaling.__init__ (from tensorflow.python.ops.init_ops) with dtype is deprecated and will be removed in a future version.\n",
+      "Instructions for updating:\n",
+      "Call initializer instance with the dtype argument instead of passing it to the constructor\n"
+     ]
+    }
+   ],
    "source": [
     "# first, create a normal neural network with 2 inputs, 6 hidden nodes, and 2 outputs\n",
     "from tensorflow.keras.models import Sequential\n",
@@ -706,7 +755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -718,22 +767,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: \"sequential_1\"\n",
+      "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_2 (Dense)              (None, 100)               4100      \n",
+      "dense (Dense)                (None, 100)               4100      \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 100)               10100     \n",
+      "dense_1 (Dense)              (None, 100)               10100     \n",
       "_________________________________________________________________\n",
-      "dense_4 (Dense)              (None, 3)                 303       \n",
+      "dense_2 (Dense)              (None, 3)                 303       \n",
       "=================================================================\n",
       "Total params: 14,503\n",
       "Trainable params: 14,503\n",
@@ -748,7 +797,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -756,134 +805,134 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/60\n",
-      "5243/5243 - 0s - loss: 0.2100 - acc: 0.9098\n",
+      "5243/5243 - 1s - loss: 0.5491 - acc: 0.7122\n",
       "Epoch 2/60\n",
-      "5243/5243 - 0s - loss: 0.2144 - acc: 0.9079\n",
+      "5243/5243 - 1s - loss: 0.3708 - acc: 0.8047\n",
       "Epoch 3/60\n",
-      "5243/5243 - 0s - loss: 0.2153 - acc: 0.9064\n",
+      "5243/5243 - 1s - loss: 0.3515 - acc: 0.8177\n",
       "Epoch 4/60\n",
-      "5243/5243 - 0s - loss: 0.2143 - acc: 0.9054\n",
+      "5243/5243 - 0s - loss: 0.3438 - acc: 0.8274\n",
       "Epoch 5/60\n",
-      "5243/5243 - 0s - loss: 0.2091 - acc: 0.9119\n",
+      "5243/5243 - 0s - loss: 0.3337 - acc: 0.8379\n",
       "Epoch 6/60\n",
-      "5243/5243 - 0s - loss: 0.2116 - acc: 0.9109\n",
+      "5243/5243 - 0s - loss: 0.3314 - acc: 0.8411\n",
       "Epoch 7/60\n",
-      "5243/5243 - 0s - loss: 0.2079 - acc: 0.9117\n",
+      "5243/5243 - 0s - loss: 0.3204 - acc: 0.8463\n",
       "Epoch 8/60\n",
-      "5243/5243 - 0s - loss: 0.2094 - acc: 0.9113\n",
+      "5243/5243 - 0s - loss: 0.3170 - acc: 0.8539\n",
       "Epoch 9/60\n",
-      "5243/5243 - 0s - loss: 0.2081 - acc: 0.9056\n",
+      "5243/5243 - 0s - loss: 0.3213 - acc: 0.8457\n",
       "Epoch 10/60\n",
-      "5243/5243 - 0s - loss: 0.2158 - acc: 0.9054\n",
+      "5243/5243 - 0s - loss: 0.3144 - acc: 0.8520\n",
       "Epoch 11/60\n",
-      "5243/5243 - 0s - loss: 0.2113 - acc: 0.9058\n",
+      "5243/5243 - 0s - loss: 0.3121 - acc: 0.8541\n",
       "Epoch 12/60\n",
-      "5243/5243 - 0s - loss: 0.2104 - acc: 0.9102\n",
+      "5243/5243 - 0s - loss: 0.3111 - acc: 0.8501\n",
       "Epoch 13/60\n",
-      "5243/5243 - 0s - loss: 0.2113 - acc: 0.9048\n",
+      "5243/5243 - 0s - loss: 0.3038 - acc: 0.8653\n",
       "Epoch 14/60\n",
-      "5243/5243 - 0s - loss: 0.2110 - acc: 0.9071\n",
+      "5243/5243 - 0s - loss: 0.3008 - acc: 0.8648\n",
       "Epoch 15/60\n",
-      "5243/5243 - 0s - loss: 0.2060 - acc: 0.9100\n",
+      "5243/5243 - 0s - loss: 0.2949 - acc: 0.8655\n",
       "Epoch 16/60\n",
-      "5243/5243 - 0s - loss: 0.2133 - acc: 0.9044\n",
+      "5243/5243 - 0s - loss: 0.2957 - acc: 0.8667\n",
       "Epoch 17/60\n",
-      "5243/5243 - 0s - loss: 0.2099 - acc: 0.9081\n",
+      "5243/5243 - 0s - loss: 0.2987 - acc: 0.8636\n",
       "Epoch 18/60\n",
-      "5243/5243 - 0s - loss: 0.2079 - acc: 0.9113\n",
+      "5243/5243 - 0s - loss: 0.2921 - acc: 0.8703\n",
       "Epoch 19/60\n",
-      "5243/5243 - 0s - loss: 0.2043 - acc: 0.9102\n",
+      "5243/5243 - 0s - loss: 0.2832 - acc: 0.8745\n",
       "Epoch 20/60\n",
-      "5243/5243 - 0s - loss: 0.2031 - acc: 0.9115\n",
+      "5243/5243 - 0s - loss: 0.2858 - acc: 0.8734\n",
       "Epoch 21/60\n",
-      "5243/5243 - 0s - loss: 0.2032 - acc: 0.9115\n",
+      "5243/5243 - 0s - loss: 0.2790 - acc: 0.8758\n",
       "Epoch 22/60\n",
-      "5243/5243 - 0s - loss: 0.2036 - acc: 0.9121\n",
+      "5243/5243 - 0s - loss: 0.2790 - acc: 0.8777\n",
       "Epoch 23/60\n",
-      "5243/5243 - 0s - loss: 0.2067 - acc: 0.9107\n",
+      "5243/5243 - 0s - loss: 0.2786 - acc: 0.8762\n",
       "Epoch 24/60\n",
-      "5243/5243 - 0s - loss: 0.2011 - acc: 0.9159\n",
+      "5243/5243 - 0s - loss: 0.2801 - acc: 0.8755\n",
       "Epoch 25/60\n",
-      "5243/5243 - 0s - loss: 0.2030 - acc: 0.9109\n",
+      "5243/5243 - 0s - loss: 0.2738 - acc: 0.8779\n",
       "Epoch 26/60\n",
-      "5243/5243 - 0s - loss: 0.2038 - acc: 0.9090\n",
+      "5243/5243 - 0s - loss: 0.2733 - acc: 0.8804\n",
       "Epoch 27/60\n",
-      "5243/5243 - 0s - loss: 0.1993 - acc: 0.9134\n",
+      "5243/5243 - 0s - loss: 0.2686 - acc: 0.8810\n",
       "Epoch 28/60\n",
-      "5243/5243 - 0s - loss: 0.2058 - acc: 0.9125\n",
+      "5243/5243 - 0s - loss: 0.2696 - acc: 0.8823\n",
       "Epoch 29/60\n",
-      "5243/5243 - 0s - loss: 0.1990 - acc: 0.9125\n",
+      "5243/5243 - 0s - loss: 0.2685 - acc: 0.8817\n",
       "Epoch 30/60\n",
-      "5243/5243 - 0s - loss: 0.2037 - acc: 0.9109\n",
+      "5243/5243 - 0s - loss: 0.2768 - acc: 0.8749\n",
       "Epoch 31/60\n",
-      "5243/5243 - 0s - loss: 0.2027 - acc: 0.9149\n",
+      "5243/5243 - 0s - loss: 0.2697 - acc: 0.8848\n",
       "Epoch 32/60\n",
-      "5243/5243 - 0s - loss: 0.2013 - acc: 0.9092\n",
+      "5243/5243 - 0s - loss: 0.2694 - acc: 0.8791\n",
       "Epoch 33/60\n",
-      "5243/5243 - 0s - loss: 0.2024 - acc: 0.9155\n",
+      "5243/5243 - 0s - loss: 0.2633 - acc: 0.8861\n",
       "Epoch 34/60\n",
-      "5243/5243 - 0s - loss: 0.1985 - acc: 0.9136\n",
+      "5243/5243 - 0s - loss: 0.2608 - acc: 0.8911\n",
       "Epoch 35/60\n",
-      "5243/5243 - 0s - loss: 0.2007 - acc: 0.9096\n",
+      "5243/5243 - 0s - loss: 0.2646 - acc: 0.8859\n",
       "Epoch 36/60\n",
-      "5243/5243 - 0s - loss: 0.1993 - acc: 0.9123\n",
+      "5243/5243 - 0s - loss: 0.2585 - acc: 0.8861\n",
       "Epoch 37/60\n",
-      "5243/5243 - 0s - loss: 0.1978 - acc: 0.9117\n",
+      "5243/5243 - 0s - loss: 0.2594 - acc: 0.8905\n",
       "Epoch 38/60\n",
-      "5243/5243 - 0s - loss: 0.1973 - acc: 0.9138\n",
+      "5243/5243 - 0s - loss: 0.2597 - acc: 0.8856\n",
       "Epoch 39/60\n",
-      "5243/5243 - 0s - loss: 0.1973 - acc: 0.9107\n",
+      "5243/5243 - 0s - loss: 0.2616 - acc: 0.8833\n",
       "Epoch 40/60\n",
-      "5243/5243 - 0s - loss: 0.1976 - acc: 0.9138\n",
+      "5243/5243 - 0s - loss: 0.2549 - acc: 0.8890\n",
       "Epoch 41/60\n",
-      "5243/5243 - 0s - loss: 0.1935 - acc: 0.9136\n",
+      "5243/5243 - 0s - loss: 0.2528 - acc: 0.8886\n",
       "Epoch 42/60\n",
-      "5243/5243 - 0s - loss: 0.1906 - acc: 0.9180\n",
+      "5243/5243 - 0s - loss: 0.2614 - acc: 0.8863\n",
       "Epoch 43/60\n",
-      "5243/5243 - 0s - loss: 0.1948 - acc: 0.9144\n",
+      "5243/5243 - 0s - loss: 0.2518 - acc: 0.8871\n",
       "Epoch 44/60\n",
-      "5243/5243 - 0s - loss: 0.1982 - acc: 0.9147\n",
+      "5243/5243 - 0s - loss: 0.2483 - acc: 0.8920\n",
       "Epoch 45/60\n",
-      "5243/5243 - 0s - loss: 0.1965 - acc: 0.9138\n",
+      "5243/5243 - 0s - loss: 0.2530 - acc: 0.8882\n",
       "Epoch 46/60\n",
-      "5243/5243 - 0s - loss: 0.1957 - acc: 0.9121\n",
+      "5243/5243 - 0s - loss: 0.2514 - acc: 0.8879\n",
       "Epoch 47/60\n",
-      "5243/5243 - 0s - loss: 0.1910 - acc: 0.9172\n",
+      "5243/5243 - 0s - loss: 0.2510 - acc: 0.8911\n",
       "Epoch 48/60\n",
-      "5243/5243 - 0s - loss: 0.1943 - acc: 0.9144\n",
+      "5243/5243 - 0s - loss: 0.2419 - acc: 0.8966\n",
       "Epoch 49/60\n",
-      "5243/5243 - 0s - loss: 0.1935 - acc: 0.9144\n",
+      "5243/5243 - 0s - loss: 0.2464 - acc: 0.8940\n",
       "Epoch 50/60\n",
-      "5243/5243 - 0s - loss: 0.1949 - acc: 0.9153\n",
+      "5243/5243 - 0s - loss: 0.2484 - acc: 0.8903\n",
       "Epoch 51/60\n",
-      "5243/5243 - 0s - loss: 0.1906 - acc: 0.9159\n",
+      "5243/5243 - 0s - loss: 0.2438 - acc: 0.8930\n",
       "Epoch 52/60\n",
-      "5243/5243 - 0s - loss: 0.1966 - acc: 0.9147\n",
+      "5243/5243 - 0s - loss: 0.2456 - acc: 0.8934\n",
       "Epoch 53/60\n",
-      "5243/5243 - 0s - loss: 0.1898 - acc: 0.9186\n",
+      "5243/5243 - 0s - loss: 0.2418 - acc: 0.8962\n",
       "Epoch 54/60\n",
-      "5243/5243 - 0s - loss: 0.1953 - acc: 0.9130\n",
+      "5243/5243 - 0s - loss: 0.2410 - acc: 0.8947\n",
       "Epoch 55/60\n",
-      "5243/5243 - 0s - loss: 0.1961 - acc: 0.9132\n",
+      "5243/5243 - 0s - loss: 0.2382 - acc: 0.8955\n",
       "Epoch 56/60\n",
-      "5243/5243 - 0s - loss: 0.1913 - acc: 0.9174\n",
+      "5243/5243 - 0s - loss: 0.2480 - acc: 0.8913\n",
       "Epoch 57/60\n",
-      "5243/5243 - 0s - loss: 0.1961 - acc: 0.9134\n",
+      "5243/5243 - 0s - loss: 0.2365 - acc: 0.9002\n",
       "Epoch 58/60\n",
-      "5243/5243 - 0s - loss: 0.1907 - acc: 0.9144\n",
+      "5243/5243 - 0s - loss: 0.2437 - acc: 0.8890\n",
       "Epoch 59/60\n",
-      "5243/5243 - 0s - loss: 0.1887 - acc: 0.9174\n",
+      "5243/5243 - 0s - loss: 0.2361 - acc: 0.8957\n",
       "Epoch 60/60\n",
-      "5243/5243 - 0s - loss: 0.1904 - acc: 0.9151\n"
+      "5243/5243 - 0s - loss: 0.2383 - acc: 0.8961\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x2748e8dcac8>"
+       "<tensorflow.python.keras.callbacks.History at 0x1a8e8da7320>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,15 +949,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1748/1748 - 0s - loss: 0.3633 - acc: 0.8787\n",
-      "Normal Neural Network - Loss: 0.3632726950285364, Accuracy: 0.8787185549736023\n"
+      "1748/1748 - 0s - loss: 0.2763 - acc: 0.8907\n",
+      "Normal Neural Network - Loss: 0.2763220770135351, Accuracy: 0.8907322883605957\n"
      ]
     }
    ],
@@ -928,16 +977,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 2, 0, 2, 1, 2, 2, 0, 1], dtype=int64)"
+       "array([0, 2, 2, 0, 2, 1, 2, 2, 0, 2], dtype=int64)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -950,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +1008,7 @@
      "text": [
       "Predicted classes: ['CANDIDATE' 'False_Positive' 'False_Positive' 'CANDIDATE'\n",
       " 'False_Positive' 'CONFIRMED' 'False_Positive' 'False_Positive'\n",
-      " 'CANDIDATE' 'CONFIRMED']\n",
+      " 'CANDIDATE' 'False_Positive']\n",
       "Actual Labels: ['CANDIDATE', 'False_Positive', 'False_Positive', 'CANDIDATE', 'False_Positive', 'CONFIRMED', 'False_Positive', 'False_Positive', 'CONFIRMED', 'CONFIRMED']\n"
      ]
     }
@@ -967,6 +1016,30 @@
    "source": [
     "print(f\"Predicted classes: {prediction_labels}\")\n",
     "print(f\"Actual Labels: {list(y_test[:10])}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Save the Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save the model\n",
+    "model.save(\"deep_learning_model.sav\")"
    ]
   },
   {
