--- a/Instructions/starter_code/deep learning model.ipynb
+++ b/Instructions/starter_code/deep learning model.ipynb
@@ -805,131 +805,131 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/60\n",
-      "5243/5243 - 1s - loss: 0.5491 - acc: 0.7122\n",
+      "5243/5243 - 0s - loss: 0.5578 - acc: 0.7290\n",
       "Epoch 2/60\n",
-      "5243/5243 - 1s - loss: 0.3708 - acc: 0.8047\n",
+      "5243/5243 - 0s - loss: 0.3679 - acc: 0.8104\n",
       "Epoch 3/60\n",
-      "5243/5243 - 1s - loss: 0.3515 - acc: 0.8177\n",
+      "5243/5243 - 0s - loss: 0.3575 - acc: 0.8159\n",
       "Epoch 4/60\n",
-      "5243/5243 - 0s - loss: 0.3438 - acc: 0.8274\n",
+      "5243/5243 - 0s - loss: 0.3421 - acc: 0.8283\n",
       "Epoch 5/60\n",
-      "5243/5243 - 0s - loss: 0.3337 - acc: 0.8379\n",
+      "5243/5243 - 0s - loss: 0.3338 - acc: 0.8375\n",
       "Epoch 6/60\n",
-      "5243/5243 - 0s - loss: 0.3314 - acc: 0.8411\n",
+      "5243/5243 - 0s - loss: 0.3241 - acc: 0.8409\n",
       "Epoch 7/60\n",
-      "5243/5243 - 0s - loss: 0.3204 - acc: 0.8463\n",
+      "5243/5243 - 0s - loss: 0.3245 - acc: 0.8425\n",
       "Epoch 8/60\n",
-      "5243/5243 - 0s - loss: 0.3170 - acc: 0.8539\n",
+      "5243/5243 - 0s - loss: 0.3181 - acc: 0.8507\n",
       "Epoch 9/60\n",
-      "5243/5243 - 0s - loss: 0.3213 - acc: 0.8457\n",
+      "5243/5243 - 0s - loss: 0.3116 - acc: 0.8533\n",
       "Epoch 10/60\n",
-      "5243/5243 - 0s - loss: 0.3144 - acc: 0.8520\n",
+      "5243/5243 - 0s - loss: 0.3070 - acc: 0.8621\n",
       "Epoch 11/60\n",
-      "5243/5243 - 0s - loss: 0.3121 - acc: 0.8541\n",
+      "5243/5243 - 0s - loss: 0.3069 - acc: 0.8568\n",
       "Epoch 12/60\n",
-      "5243/5243 - 0s - loss: 0.3111 - acc: 0.8501\n",
+      "5243/5243 - 0s - loss: 0.2962 - acc: 0.8655\n",
       "Epoch 13/60\n",
-      "5243/5243 - 0s - loss: 0.3038 - acc: 0.8653\n",
+      "5243/5243 - 0s - loss: 0.3093 - acc: 0.8573\n",
       "Epoch 14/60\n",
-      "5243/5243 - 0s - loss: 0.3008 - acc: 0.8648\n",
+      "5243/5243 - 0s - loss: 0.2945 - acc: 0.8674\n",
       "Epoch 15/60\n",
-      "5243/5243 - 0s - loss: 0.2949 - acc: 0.8655\n",
+      "5243/5243 - 0s - loss: 0.2939 - acc: 0.8659\n",
       "Epoch 16/60\n",
-      "5243/5243 - 0s - loss: 0.2957 - acc: 0.8667\n",
+      "5243/5243 - 0s - loss: 0.2862 - acc: 0.8753\n",
       "Epoch 17/60\n",
-      "5243/5243 - 0s - loss: 0.2987 - acc: 0.8636\n",
+      "5243/5243 - 0s - loss: 0.3003 - acc: 0.8564\n",
       "Epoch 18/60\n",
-      "5243/5243 - 0s - loss: 0.2921 - acc: 0.8703\n",
+      "5243/5243 - 0s - loss: 0.2822 - acc: 0.8743\n",
       "Epoch 19/60\n",
-      "5243/5243 - 0s - loss: 0.2832 - acc: 0.8745\n",
+      "5243/5243 - 0s - loss: 0.2883 - acc: 0.8680\n",
       "Epoch 20/60\n",
-      "5243/5243 - 0s - loss: 0.2858 - acc: 0.8734\n",
+      "5243/5243 - 0s - loss: 0.2843 - acc: 0.8699\n",
       "Epoch 21/60\n",
-      "5243/5243 - 0s - loss: 0.2790 - acc: 0.8758\n",
+      "5243/5243 - 0s - loss: 0.2793 - acc: 0.8735\n",
       "Epoch 22/60\n",
-      "5243/5243 - 0s - loss: 0.2790 - acc: 0.8777\n",
+      "5243/5243 - 0s - loss: 0.2788 - acc: 0.8760\n",
       "Epoch 23/60\n",
-      "5243/5243 - 0s - loss: 0.2786 - acc: 0.8762\n",
+      "5243/5243 - 0s - loss: 0.2794 - acc: 0.8774\n",
       "Epoch 24/60\n",
-      "5243/5243 - 0s - loss: 0.2801 - acc: 0.8755\n",
+      "5243/5243 - 0s - loss: 0.2720 - acc: 0.8776\n",
       "Epoch 25/60\n",
-      "5243/5243 - 0s - loss: 0.2738 - acc: 0.8779\n",
+      "5243/5243 - 0s - loss: 0.2780 - acc: 0.8774\n",
       "Epoch 26/60\n",
-      "5243/5243 - 0s - loss: 0.2733 - acc: 0.8804\n",
+      "5243/5243 - 0s - loss: 0.2710 - acc: 0.8791\n",
       "Epoch 27/60\n",
-      "5243/5243 - 0s - loss: 0.2686 - acc: 0.8810\n",
+      "5243/5243 - 0s - loss: 0.2731 - acc: 0.8808\n",
       "Epoch 28/60\n",
-      "5243/5243 - 0s - loss: 0.2696 - acc: 0.8823\n",
+      "5243/5243 - 0s - loss: 0.2690 - acc: 0.8816\n",
       "Epoch 29/60\n",
-      "5243/5243 - 0s - loss: 0.2685 - acc: 0.8817\n",
+      "5243/5243 - 0s - loss: 0.2696 - acc: 0.8764\n",
       "Epoch 30/60\n",
-      "5243/5243 - 0s - loss: 0.2768 - acc: 0.8749\n",
+      "5243/5243 - 0s - loss: 0.2709 - acc: 0.8798\n",
       "Epoch 31/60\n",
-      "5243/5243 - 0s - loss: 0.2697 - acc: 0.8848\n",
+      "5243/5243 - 0s - loss: 0.2665 - acc: 0.8833\n",
       "Epoch 32/60\n",
-      "5243/5243 - 0s - loss: 0.2694 - acc: 0.8791\n",
+      "5243/5243 - 0s - loss: 0.2682 - acc: 0.8848\n",
       "Epoch 33/60\n",
-      "5243/5243 - 0s - loss: 0.2633 - acc: 0.8861\n",
+      "5243/5243 - 0s - loss: 0.2591 - acc: 0.8877\n",
       "Epoch 34/60\n",
-      "5243/5243 - 0s - loss: 0.2608 - acc: 0.8911\n",
+      "5243/5243 - 0s - loss: 0.2592 - acc: 0.8859\n",
       "Epoch 35/60\n",
-      "5243/5243 - 0s - loss: 0.2646 - acc: 0.8859\n",
+      "5243/5243 - 0s - loss: 0.2576 - acc: 0.8875\n",
       "Epoch 36/60\n",
-      "5243/5243 - 0s - loss: 0.2585 - acc: 0.8861\n",
+      "5243/5243 - 0s - loss: 0.2701 - acc: 0.8791\n",
       "Epoch 37/60\n",
-      "5243/5243 - 0s - loss: 0.2594 - acc: 0.8905\n",
+      "5243/5243 - 0s - loss: 0.2624 - acc: 0.8825\n",
       "Epoch 38/60\n",
-      "5243/5243 - 0s - loss: 0.2597 - acc: 0.8856\n",
+      "5243/5243 - 0s - loss: 0.2537 - acc: 0.8917\n",
       "Epoch 39/60\n",
-      "5243/5243 - 0s - loss: 0.2616 - acc: 0.8833\n",
+      "5243/5243 - 0s - loss: 0.2553 - acc: 0.8915\n",
       "Epoch 40/60\n",
-      "5243/5243 - 0s - loss: 0.2549 - acc: 0.8890\n",
+      "5243/5243 - 0s - loss: 0.2576 - acc: 0.8869\n",
       "Epoch 41/60\n",
-      "5243/5243 - 0s - loss: 0.2528 - acc: 0.8886\n",
+      "5243/5243 - 0s - loss: 0.2510 - acc: 0.8917\n",
       "Epoch 42/60\n",
-      "5243/5243 - 0s - loss: 0.2614 - acc: 0.8863\n",
+      "5243/5243 - 0s - loss: 0.2645 - acc: 0.8863\n",
       "Epoch 43/60\n",
-      "5243/5243 - 0s - loss: 0.2518 - acc: 0.8871\n",
+      "5243/5243 - 0s - loss: 0.2497 - acc: 0.8938\n",
       "Epoch 44/60\n",
-      "5243/5243 - 0s - loss: 0.2483 - acc: 0.8920\n",
+      "5243/5243 - 0s - loss: 0.2523 - acc: 0.8928\n",
       "Epoch 45/60\n",
-      "5243/5243 - 0s - loss: 0.2530 - acc: 0.8882\n",
+      "5243/5243 - 0s - loss: 0.2510 - acc: 0.8922\n",
       "Epoch 46/60\n",
-      "5243/5243 - 0s - loss: 0.2514 - acc: 0.8879\n",
+      "5243/5243 - 0s - loss: 0.2485 - acc: 0.8936\n",
       "Epoch 47/60\n",
-      "5243/5243 - 0s - loss: 0.2510 - acc: 0.8911\n",
+      "5243/5243 - 0s - loss: 0.2540 - acc: 0.8854\n",
       "Epoch 48/60\n",
-      "5243/5243 - 0s - loss: 0.2419 - acc: 0.8966\n",
+      "5243/5243 - 0s - loss: 0.2467 - acc: 0.8926\n",
       "Epoch 49/60\n",
-      "5243/5243 - 0s - loss: 0.2464 - acc: 0.8940\n",
+      "5243/5243 - 0s - loss: 0.2427 - acc: 0.8949\n",
       "Epoch 50/60\n",
-      "5243/5243 - 0s - loss: 0.2484 - acc: 0.8903\n",
+      "5243/5243 - 0s - loss: 0.2416 - acc: 0.8976\n",
       "Epoch 51/60\n",
-      "5243/5243 - 0s - loss: 0.2438 - acc: 0.8930\n",
+      "5243/5243 - 0s - loss: 0.2434 - acc: 0.8941\n",
       "Epoch 52/60\n",
-      "5243/5243 - 0s - loss: 0.2456 - acc: 0.8934\n",
+      "5243/5243 - 0s - loss: 0.2466 - acc: 0.8882\n",
       "Epoch 53/60\n",
-      "5243/5243 - 0s - loss: 0.2418 - acc: 0.8962\n",
+      "5243/5243 - 0s - loss: 0.2434 - acc: 0.8940\n",
       "Epoch 54/60\n",
-      "5243/5243 - 0s - loss: 0.2410 - acc: 0.8947\n",
+      "5243/5243 - 0s - loss: 0.2414 - acc: 0.8940\n",
       "Epoch 55/60\n",
-      "5243/5243 - 0s - loss: 0.2382 - acc: 0.8955\n",
+      "5243/5243 - 0s - loss: 0.2458 - acc: 0.8884\n",
       "Epoch 56/60\n",
-      "5243/5243 - 0s - loss: 0.2480 - acc: 0.8913\n",
+      "5243/5243 - 0s - loss: 0.2378 - acc: 0.8995\n",
       "Epoch 57/60\n",
-      "5243/5243 - 0s - loss: 0.2365 - acc: 0.9002\n",
+      "5243/5243 - 0s - loss: 0.2406 - acc: 0.8976\n",
       "Epoch 58/60\n",
-      "5243/5243 - 0s - loss: 0.2437 - acc: 0.8890\n",
+      "5243/5243 - 0s - loss: 0.2410 - acc: 0.8930\n",
       "Epoch 59/60\n",
-      "5243/5243 - 0s - loss: 0.2361 - acc: 0.8957\n",
+      "5243/5243 - 0s - loss: 0.2411 - acc: 0.8949\n",
       "Epoch 60/60\n",
-      "5243/5243 - 0s - loss: 0.2383 - acc: 0.8961\n"
+      "5243/5243 - 0s - loss: 0.2340 - acc: 0.8991\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x1a8e8da7320>"
+       "<tensorflow.python.keras.callbacks.History at 0x1ed50295a58>"
       ]
      },
      "execution_count": 16,
@@ -956,8 +956,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1748/1748 - 0s - loss: 0.2763 - acc: 0.8907\n",
-      "Normal Neural Network - Loss: 0.2763220770135351, Accuracy: 0.8907322883605957\n"
+      "1748/1748 - 0s - loss: 0.2711 - acc: 0.8867\n",
+      "Normal Neural Network - Loss: 0.27107809173706193, Accuracy: 0.8867276906967163\n"
      ]
     }
    ],
@@ -983,7 +983,7 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 2, 2, 0, 2, 1, 2, 2, 0, 2], dtype=int64)"
+       "array([0, 2, 2, 0, 2, 1, 2, 2, 1, 2], dtype=int64)"
       ]
      },
      "execution_count": 18,
@@ -1008,7 +1008,7 @@
      "text": [
       "Predicted classes: ['CANDIDATE' 'False_Positive' 'False_Positive' 'CANDIDATE'\n",
       " 'False_Positive' 'CONFIRMED' 'False_Positive' 'False_Positive'\n",
-      " 'CANDIDATE' 'False_Positive']\n",
+      " 'CONFIRMED' 'False_Positive']\n",
       "Actual Labels: ['CANDIDATE', 'False_Positive', 'False_Positive', 'CANDIDATE', 'False_Positive', 'CONFIRMED', 'False_Positive', 'False_Positive', 'CONFIRMED', 'CONFIRMED']\n"
      ]
     }
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
