--- a/Instructions/starter_code/deep learning model.ipynb
+++ b/Instructions/starter_code/deep learning model.ipynb
@@ -965,7 +965,7 @@
     "model_loss, model_accuracy = model.evaluate(\n",
     "    X_test_scaled, y_test_categorical, verbose=2)\n",
     "print(\n",
-    "    f\"Normal Neural Network - Loss: {model_loss}, Accuracy: {model_accuracy}\")"
+    "    f\"Deep Neural Network - Loss: {model_loss}, Accuracy: {model_accuracy}\")"
    ]
   },
   {
