double checking errors from code

--- a/Instructions/starter_code/deep learning model.ipynb
+++ b/Instructions/starter_code/deep learning model.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing dependencies\n",
     "import pandas as pd"
    ]
   },
@@ -236,6 +237,7 @@
     }
    ],
    "source": [
+    "#Reading csv\n",
     "df = pd.read_csv(\"exoplanet_data.csv\")\n",
     "# Drop the null columns where all values are null\n",
     "df = df.dropna(axis='columns', how='all')\n",
@@ -290,9 +292,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing dependencies\n",
     "from sklearn.model_selection import train_test_split\n",
+    "#Setting y and X\n",
     "y = df[\"koi_disposition\"]\n",
     "X = df.drop(columns=[\"koi_disposition\"])\n",
+    "#Splitting the data into training and testing data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=1, stratify=y)"
    ]
   },
@@ -525,6 +530,7 @@
     }
    ],
    "source": [
+    "#Printing the head of the training data\n",
     "X_train.head()"
    ]
   },
@@ -552,6 +558,7 @@
     }
    ],
    "source": [
+    "#Scaling the data with MinMaxScaler\n",
     "from sklearn.preprocessing import LabelEncoder, MinMaxScaler\n",
     "X_scaler = MinMaxScaler().fit(X_train)\n",
     "X_train_scaled = X_scaler.transform(X_train)\n",
@@ -571,63 +578,7 @@
        "548     False_Positive\n",
        "3953    False_Positive\n",
        "2362         CONFIRMED\n",
-       "3781    False_Positive\n",
-       "4870         CANDIDATE\n",
-       "3380         CANDIDATE\n",
-       "1661         CONFIRMED\n",
-       "6530    False_Positive\n",
-       "5733    False_Positive\n",
-       "3999    False_Positive\n",
-       "3295    False_Positive\n",
-       "4560    False_Positive\n",
-       "889          CONFIRMED\n",
-       "108          CONFIRMED\n",
-       "1282         CANDIDATE\n",
-       "6164    False_Positive\n",
-       "3110         CANDIDATE\n",
-       "6305    False_Positive\n",
-       "2089         CONFIRMED\n",
-       "3004         CANDIDATE\n",
-       "152          CONFIRMED\n",
-       "5064    False_Positive\n",
-       "1924         CANDIDATE\n",
-       "5284         CANDIDATE\n",
-       "3180         CANDIDATE\n",
-       "2790         CANDIDATE\n",
-       "1992         CANDIDATE\n",
-       "5103    False_Positive\n",
-       "             ...      \n",
-       "4064    False_Positive\n",
-       "1886    False_Positive\n",
-       "6800         CANDIDATE\n",
-       "6843         CANDIDATE\n",
-       "1939         CANDIDATE\n",
-       "4915    False_Positive\n",
-       "67           CONFIRMED\n",
-       "210     False_Positive\n",
-       "3025    False_Positive\n",
-       "2642         CONFIRMED\n",
-       "1926    False_Positive\n",
-       "5613         CANDIDATE\n",
-       "6670    False_Positive\n",
-       "5083    False_Positive\n",
-       "6531    False_Positive\n",
-       "926          CONFIRMED\n",
-       "4703    False_Positive\n",
-       "5526    False_Positive\n",
-       "3401         CONFIRMED\n",
-       "519     False_Positive\n",
-       "4905    False_Positive\n",
-       "6902         CANDIDATE\n",
-       "5092    False_Positive\n",
-       "5511    False_Positive\n",
-       "2585         CONFIRMED\n",
-       "2353         CONFIRMED\n",
-       "4105    False_Positive\n",
-       "5432    False_Positive\n",
-       "277     False_Positive\n",
-       "4402    False_Positive\n",
-       "Name: koi_disposition, Length: 5243, dtype: object"
+       "Name: koi_disposition, dtype: object"
       ]
      },
      "execution_count": 7,
@@ -636,7 +587,8 @@
     }
    ],
    "source": [
-    "y_train"
+    "#Printing the head of y train\n",
+    "y_train.head()"
    ]
   },
   {
@@ -645,6 +597,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing dependencies\n",
     "import tensorflow as tf\n",
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.utils import to_categorical\n",
@@ -657,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
+    "#Hot encode categorical data\n",
     "label_encoder = LabelEncoder()\n",
     "label_encoder.fit(y_train)\n",
     "encoded_y_train = label_encoder.transform(y_train)\n",
@@ -690,6 +643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Using to_categorical function\n",
     "y_train_categorical = to_categorical(encoded_y_train)\n",
     "y_test_categorical = to_categorical(encoded_y_test)"
    ]
@@ -747,6 +701,7 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import Dense\n",
     "\n",
+    "#Create model\n",
     "model = Sequential()\n",
     "model.add(Dense(units=100, activation='relu', input_dim=40))\n",
     "model.add(Dense(units=100, activation='relu'))\n",
@@ -938,6 +893,7 @@
     }
    ],
    "source": [
+    "#Fit modelto X_train_scaled and y_train_categorical\n",
     "model.fit(\n",
     "    X_train_scaled,\n",
     "    y_train_categorical,\n",
@@ -962,6 +918,7 @@
     }
    ],
    "source": [
+    "#Print the loss and accuracy of the model\n",
     "model_loss, model_accuracy = model.evaluate(\n",
     "    X_test_scaled, y_test_categorical, verbose=2)\n",
     "print(\n",
@@ -992,6 +949,7 @@
     }
    ],
    "source": [
+    "#MaKing predictions\n",
     "encoded_predictions = model.predict_classes(X_test_scaled[:10])\n",
     "prediction_labels = label_encoder.inverse_transform(encoded_predictions)\n",
     "encoded_predictions"
@@ -1014,6 +972,7 @@
     }
    ],
    "source": [
+    "#Printing the predictions\n",
     "print(f\"Predicted classes: {prediction_labels}\")\n",
     "print(f\"Actual Labels: {list(y_test[:10])}\")"
    ]
