--- a/Instructions/starter_code/support vector machine model.ipynb
+++ b/Instructions/starter_code/support vector machine model.ipynb
@@ -6,6 +6,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing dependencies\n",
     "import pandas as pd"
    ]
   },
@@ -238,6 +239,7 @@
     }
    ],
    "source": [
+    "#Reading the csv\n",
     "df = pd.read_csv(\"exoplanet_data.csv\")\n",
     "# Drop the null columns where all values are null\n",
     "df = df.dropna(axis='columns', how='all')\n",
@@ -290,6 +292,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Importing the dependencies and spliting the data into training and testing data\n",
     "from sklearn.model_selection import train_test_split \n",
     "X = selected_features\n",
     "y = df [['koi_disposition']]\n",
@@ -522,6 +525,7 @@
     }
    ],
    "source": [
+    "#Importing dependencies and Scaling data with MinMaxScaler\n",
     "from sklearn.preprocessing import LabelEncoder, MinMaxScaler \n",
     "X_scaler = MinMaxScaler().fit(X_train) \n",
     "X_train_scaled = X_scaler.transform(X_train) \n",
@@ -580,233 +584,8 @@
        "      <th>29</th>\n",
        "      <td>CANDIDATE</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6291</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5193</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2505</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2984</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2699</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>751</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6040</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>584</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1220</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6639</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2389</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5787</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6005</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>548</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5405</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1840</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5954</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6497</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1782</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2258</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6732</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6836</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3819</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4907</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4532</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4117</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3385</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4555</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1184</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6420</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5051</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5311</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2433</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6949</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5611</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2391</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>769</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1685</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>130</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2919</th>\n",
-       "      <td>CONFIRMED</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3171</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3444</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6231</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5578</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4426</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5334</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>466</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6265</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5734</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3092</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3772</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5191</th>\n",
-       "      <td>CANDIDATE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5226</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5390</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>860</th>\n",
-       "      <td>FALSE POSITIVE</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5243 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -815,65 +594,7 @@
        "6370  FALSE POSITIVE\n",
        "2879  FALSE POSITIVE\n",
        "107        CONFIRMED\n",
-       "29         CANDIDATE\n",
-       "6291  FALSE POSITIVE\n",
-       "5193       CANDIDATE\n",
-       "2505  FALSE POSITIVE\n",
-       "2984       CANDIDATE\n",
-       "2699       CONFIRMED\n",
-       "751        CONFIRMED\n",
-       "6040  FALSE POSITIVE\n",
-       "584   FALSE POSITIVE\n",
-       "1220       CONFIRMED\n",
-       "6639  FALSE POSITIVE\n",
-       "2389       CONFIRMED\n",
-       "5787       CANDIDATE\n",
-       "6005  FALSE POSITIVE\n",
-       "548   FALSE POSITIVE\n",
-       "5405       CANDIDATE\n",
-       "1840       CONFIRMED\n",
-       "5954  FALSE POSITIVE\n",
-       "6497       CANDIDATE\n",
-       "1782       CONFIRMED\n",
-       "2258       CANDIDATE\n",
-       "6732  FALSE POSITIVE\n",
-       "6836  FALSE POSITIVE\n",
-       "3819  FALSE POSITIVE\n",
-       "4907  FALSE POSITIVE\n",
-       "4532  FALSE POSITIVE\n",
-       "...              ...\n",
-       "4117  FALSE POSITIVE\n",
-       "3385  FALSE POSITIVE\n",
-       "4555       CANDIDATE\n",
-       "1184       CONFIRMED\n",
-       "6420  FALSE POSITIVE\n",
-       "5051  FALSE POSITIVE\n",
-       "5311       CANDIDATE\n",
-       "2433  FALSE POSITIVE\n",
-       "6949  FALSE POSITIVE\n",
-       "5611  FALSE POSITIVE\n",
-       "2391       CANDIDATE\n",
-       "769        CONFIRMED\n",
-       "1685       CANDIDATE\n",
-       "130        CONFIRMED\n",
-       "2919       CONFIRMED\n",
-       "3171  FALSE POSITIVE\n",
-       "3444       CANDIDATE\n",
-       "6231  FALSE POSITIVE\n",
-       "5578  FALSE POSITIVE\n",
-       "4426       CANDIDATE\n",
-       "5334  FALSE POSITIVE\n",
-       "466   FALSE POSITIVE\n",
-       "6265  FALSE POSITIVE\n",
-       "5734  FALSE POSITIVE\n",
-       "3092  FALSE POSITIVE\n",
-       "3772  FALSE POSITIVE\n",
-       "5191       CANDIDATE\n",
-       "5226  FALSE POSITIVE\n",
-       "5390  FALSE POSITIVE\n",
-       "860   FALSE POSITIVE\n",
-       "\n",
-       "[5243 rows x 1 columns]"
+       "29         CANDIDATE"
       ]
      },
      "execution_count": 7,
@@ -882,15 +603,9 @@
     }
    ],
    "source": [
-    "y_train"
+    "#Priting the head of y_train\n",
+    "y_train.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -927,7 +642,7 @@
     }
    ],
    "source": [
-    "# Support vector machine linear classifier\n",
+    "# Creating a support vector machine linear classifier model\n",
     "from sklearn.svm import SVC\n",
     "model2 = SVC(kernel='linear')\n",
     "model2.fit(X_train_scaled, y_train)"
@@ -948,6 +663,7 @@
     }
    ],
    "source": [
+    "#Printing the training and testing score for the model\n",
     "print(f\"Training Data Score: {model2.score(X_train_scaled, y_train)}\")\n",
     "print(f\"Testing Data Score: {model2.score(X_test_scaled, y_test)}\")"
    ]
@@ -991,6 +707,7 @@
     }
    ],
    "source": [
+    "#Creating a GridSearchCV\n",
     "from sklearn.model_selection import GridSearchCV\n",
     "param_grid = {'C': [1, 5, 10],\n",
     "             'gamma': [0.0001, 0.001, 0.01]}\n",
@@ -1464,6 +1181,7 @@
     }
    ],
    "source": [
+    "#Fitting the training data to the gridsearch\n",
     "grid2.fit(X_train_scaled, y_train)\n"
    ]
   },
@@ -1482,6 +1200,7 @@
     }
    ],
    "source": [
+    "#Printing the best params and best score from the gridsearch\n",
     "print(grid2.best_params_)\n",
     "print(grid2.best_score_)"
    ]
@@ -1505,6 +1224,7 @@
     }
    ],
    "source": [
+    "#Make predictions\n",
     "prediction = grid2.predict(X_test_scaled[:10])\n",
     "prediction"
    ]
